@@ -1,5 +1,5 @@
 /*
- * $Id: vdelivermail.c,v 1.11 2004-02-16 06:28:44 tomcollins Exp $
+ * $Id: vdelivermail.c,v 1.11.2.1 2004-05-27 00:31:09 tomcollins Exp $
  * Copyright (C) 1999-2003 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -439,8 +439,9 @@ int deliver_mail(char *address, char *quota)
  time_t tm;
  off_t file_count;
  long unsigned pid;
+ long unsigned inject_pid = 0;
+ int child;
  int write_fd;
- int inject = 0;
  FILE *fs;
  char tmp_file[256];
 
@@ -570,9 +571,8 @@ int deliver_mail(char *address, char *quota)
       char *atpos;
       int dtlen;
 
-      qmail_inject_open(address);
+      inject_pid = qmail_inject_open(address);
       write_fd = fdm;
-      inject = 1;
 
       /* use the DTLINE variable, but skip past the dash in 
        * domain-user@domain 
@@ -654,9 +654,10 @@ int deliver_mail(char *address, char *quota)
             }
         }
     }
-    if ( inject == 1 ) {
+    if ( inject_pid != 0 ) {
         close(write_fd);
-        return(0);
+        waitpid(inject_pid,&child,0);
+        return(wait_exitcode(child));
     }
 
     /* if we are writing to a Maildir, move it
